--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="./src/index.tsx" type="module"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/index.f3dc5f04.css"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Blog</title></head><body> <div id="root"></div> <script src="/index.773d809d.js" type="module"></script> </body></html>
