--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="index.f225f852.css"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Blog</title></head><body> <div id="root"></div> <script src="index.835d06e4.js" type="module"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
