--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
+    <link rel="icon" type="image/png" href="../src/icons/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
